--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,24 @@ $id$
             <scope>provided</scope>
         </dependency>
     </dependencies>
+    <resources>
+        <resource>
+            <directory>${project.sources}</directory>
+            <filtering>true</filtering>
+            <excludes>
+                <exclude>**/*.woff</exclude>
+                <exclude>**/*.ttf</exclude>
+            </excludes>
+        </resource>
+        <resource>
+            <directory>${project.sources}</directory>
+            <filtering>false</filtering>
+            <includes>
+                <include>**/*.woff</include>
+                <include>**/*.ttf</include>
+            </includes>
+        </resource>
+    </resources>
 
     <properties>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
